# hw-1-AdvC-2022-Spring

./: CMakeLists.txt  Makefile  README.md  code_cov.sh  main.c  memtest.sh  run_linters.sh
.github/workflows/: ci.yml
group_data_lib/: CMakeLists.txt  group_data.c  group_data.h  list_t.c  list_t.h  string_t.c  string_t.h
tests/: CMakeLists.txt  tests.cpp  utils.cpp  utils.hpp
